@@ -13,6 +13,8 @@ extern "C" {
 #include <stdio.h>
 #define DS_MAX_VERSION (20)
 
+#include "transports.h"
+
 //#include <mpi.h>
 
 /*
@@ -32,9 +34,9 @@ extern "C" {
  */
 
 // this will get all vel and pres data
-void get_common_buffer(int timestep,int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used);
+void get_common_buffer(uint8_t transport_minor, int timestep,int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used);
  
-void put_common_buffer(int timestep, int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used);
+void put_common_buffer(uint8_t transport_minor, int timestep, int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used);
 
 //void get_common_buffer_unblocking(int timestep,int ndim, int bounds[6], int rank, MPI_Comm * p_gcomm,char * var_name, void **p_buffer,size_t elem_size, double *p_time_used);
 
