@@ -31,7 +31,8 @@ PBS_O_HOME=$HOME
 PBS_O_WORKDIR=$(pwd)
 SCRATCH_DIR=/pylon5/cc4s86p/fli5/data_broker_adios/${SLURM_JOBID}
 
-BUILD_DIR=${PBS_O_WORKDIR}/build_${CASE_NAME}
+export Transport=ADIOS_STAGING_FLEXPATH
+BUILD_DIR=${PBS_O_WORKDIR}/build
 
 BIN_PRODUCER=${BUILD_DIR}/bin/run_lbm;
 BIN_CONSUMER=${BUILD_DIR}/bin/adios_read_global;
