@@ -1,4 +1,5 @@
-BUILD_DIR=${PBS_O_WORKDIR}/build_${CASE_NAME}
+
+BUILD_DIR=${PBS_O_WORKDIR}/build
 
 BIN_PRODUCER=${BUILD_DIR}/bin/run_lbm;
 BIN_CONSUMER=${BUILD_DIR}/bin/mpiio_read;
