@@ -10,7 +10,7 @@
 int main(int argc, char *argv[]){
     transport_method_t transport;
     transport = get_current_transport();
-    printf("get tranport code %x\n", transport);
+    printf("get tranport code %x, major %x, minor %x\n", transport, get_major(transport) , get_minor(transport));
     return 1;
 }
 
